Adding more classes to organize webpage

--- a/index.html
+++ b/index.html
@@ -19,24 +19,29 @@
                 </ul>
             </div>
             <div class=content>
-                <div class="content-title">
-                    Nice to see you
+                <div class="left">
+                    <div class="title">
+                        Welcome
+                    </div>
+                    <div class="subtext">
+                        I'm Grace Hutapea, a sophomore studying Computer Science and Business Administration at USC.
+                    </div>
+                    <div class="button">
+                        Stay connected
+                    </div>
                 </div>
-                <div class="subtext">
-                    I'm Grace Hutapea, a sophomore studying Computer Science and Business Administration at USC.
-                </div>
-                <div class="button">
-                    Stay connected
-                </div>
-                <div class="image">
-                    Placeholder!
+                <div class="right">
+                    <div class="image">
+                        Placeholder!
+                    </div>
                 </div>
             </div>
         </div>
         <div class="box-two">
-            <div class="info-title">
+            <div class="title">
                 About me
             </div>
+            <div class=""
             <div class="minibox-one">
                 <div class="subtext">
                     Outdoors
